deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: all-in-one
  labels:
    app: all-in-one
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: all-in-one
